[package]
name = "ralgo"
version = "0.1.0"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2018"
description = "Implementation of algorithms in Rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/MiSawa/ralgo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["dependency_util", "verify"]

[patch.crates-io]
rls-analysis = { git = "https://github.com/MiSawa/rls.git", branch = "expose-more-things" }
rls-data = { git = "https://github.com/MiSawa/rls.git", branch = "expose-more-things" }
