[package]
name = "ralgo"
version = "0.1.0"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2018"
description = "Implementation of algorithms in Rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/MiSawa/ralgo/"

[dependencies]
ac-library-rs = "=0.1.1"
num = "0.2"

[workspace]
members = [ "crates/ralgo-test-util", "verify" ]
