[package]
name = "practice2"
version = "0.1.0"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ralgo = { path = "../../" }
proconio = { version = "0.4.1", features = ["derive"] }
itertools = "0.9.0"
