[package]
name = "ralgo-test-util"
version = "0.1.0"
edition = "2021"

[features]
default = ["proconio", "proptest"]
proconio = ["dep:proconio"]
proptest = ["dep:proptest"]

[dependencies]
proconio = { version = "*", optional = true }
proptest = { version = "1.4.0", optional = true }
stdio-override = "0.1.3"
tempfile = "3.10.1"

[build-dependencies]
cfg_rust_features = "0.1.2"

[dev-dependencies]
proconio = "*"
proptest = "1.4.0"
