[package]
name = "ralgo-test-util"
version = "0.1.0"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2021"
description = "Test utils for competitive programming"
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/MiSawa/ralgo/"

[features]
default = ["proconio", "proptest"]
proconio = ["dep:proconio"]
proptest = ["dep:proptest"]

[dependencies]
proconio = { version = "0", optional = true }
proptest = { version = "1.4.0", optional = true }
stdio-override = "0.1.3"
tempfile = "3.10.1"

[build-dependencies]
cfg_rust_features = "0.1.2"

[dev-dependencies]
proconio = "0"
proptest = "1.4.0"
